@@ -1,6 +1,6 @@
 always_built_SUBDIRS =					\
 	common accessibility				\
-	desktop-links font \
+	default-applications desktop-links font		\
 	background keyboard mouse sound			\
 	file-types theme-switcher ui-properties		\
 	keybindings network
