@@ -197,6 +197,7 @@ libwindow-settings/Makefile
 capplets/Makefile
 capplets/common/Makefile
 capplets/background/Makefile
+capplets/default-applications/Makefile
 capplets/desktop-links/Makefile
 capplets/file-types/Makefile
 capplets/file-types/libuuid/Makefile
