@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<gconfschemafile>
+  <schemalist>
+    <schema>
+      <applyto>/apps/gnome_settings_daemon/editor/sync_text_types</applyto>
+      <key>/schemas/apps/gnome_settings_daemon/editor/sync_text_types</key>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>Sync text/plain and text/* handlers</short>
+        <long>If true, the mime handlers for text/plain and text/* will be kept in sync</long>
+      </locale>
+    </schema>
+  </schemalist>
+</gconfschemafile>
