@@ -1,3 +1,13 @@
+2002-05-16  jacob berkman  <jacob@ximian.com>
+
+	* schemas/apps_gnome_settings_daemon_default_editor.schemas: add a
+	key to turn off some behaviour
+
+	* capplets/Makefile.am (always_built_SUBDIRS): 
+	* configure.in: re-add default-applications
+
+	fixes #78037
+
 2002-05-14  Seth Nickell  <snickell@stanford.edu>
 
 	* Makefile.am:
